resources/assets/styles/layouts/_subsite-menu.scss
.aside-subsite-menu.preload {
  -webkit-transition: none !important;
  -moz-transition: none !important;
  -ms-transition: none !important;
  -o-transition: none !important;

  #utk-subsite-menu {
    width: 303px;
    transition: $transition-all;

    @include respond(xs, sm) {
      position: fixed !important;
      width: 100% !important;
      top: 160px !important;
      display: none;
      left: 0 !important;
      background-color: $gray-0 !important;
      height: calc(100% - 160px) !important;

      #subsite-menu-0 {
        border-bottom: 2px solid $gray-1;
      }

      .subsite-menu-wrap {
        position: fixed;
        background-color: $gray-0;
        overflow: scroll;
        z-index: 99;
        height: calc(100% - 160px);
        padding-bottom: 0;
      }

      .subsite-menu {
        background-color: $white;
        border-left: none !important;
        border-right: none !important;
      }

      .subsite-call-to-actions {
        margin-top: 0 !important;
        padding: 15px !important;
        position: fixed;
        bottom: 0;
        left: 0;
        z-index: 100;
        background-color: $gray-0;
        width: 100%;

        > a.subsite-call-to-actions--item {
          margin-bottom: 15px;

          &:last-child {
            margin-bottom: 0;
          }
        }

        &::before {
          display: block;
          content: ' ';
          width: 100%;
          left: 0;
          top: -$golden-ratio-4;
          height: $golden-ratio-4;
          background-color: $torch;
          position: absolute;
          z-index: 10;

          @include filter-gradient(rgba($gray-0, 0), 0%, $gray-0, 100%);
        }
      }

      .subsite-menu-help {
        display: block;
        position: fixed;
        width: 100%;
        z-index: 101;
      }

      /*
       * compute measurements for cta fade on bottom in xs/sm
       */

      .subsite-menu-elements {
        &.subsite-cta-count-null {
          .subsite-menu-wrap {
            padding-bottom: calc((#{$golden-ratio-1} * 1) + 15px);
          }

          .subsite-menu-help {
            bottom: 15px;
          }
        }

        &.subsite-cta-count-1 {
          .subsite-menu-wrap {
            padding-bottom: calc((#{$golden-ratio-4} * 2) + 15px);
          }

          .subsite-menu-help {
            bottom: calc((#{$golden-ratio-4} * 1) + 15px + 11px); // 47px base + 15px bottom margin + 11px top margin
          }
        }

        &.subsite-cta-count-2 {
          .subsite-menu-wrap {
            padding-bottom: calc((#{$golden-ratio-4} * 3) + 30px); // two buttons + margin between
          }

          .subsite-menu-help {
            bottom: calc((#{$golden-ratio-4} * 2) + 30px + 11px); // 47px base + 30px margins + 11px top margin
          }
        }

        &.subsite-cta-count-3 {
          .subsite-menu-wrap {
            padding-bottom: calc((#{$golden-ratio-4} * 4) + 45px); // two buttons + margin between
          }

          .subsite-menu-help {
            bottom: calc((#{$golden-ratio-4} * 3) + 45px + 11px); // 47px base + 45px margins + 11px top margin
          }
        }
      }
    }

    @include respond(sm) {
      top: 175px !important;
      height: calc(100% - 175px);
    }
  }
}

body.subsite-menu-mobile-expand {
  overflow: hidden;

  .aside-subsite-menu.preload {
    #utk-subsite-menu {
      display: block;
    }
  }

  .page-header--current-page-expand {
    display: none !important;
  }

  .page-header--current-page-close {
    display: block !important;

    .icon-left-open {
      display: inline-block !important;
      color: $white !important;

      @include respond(xs, sm) {
        display: inline-block !important;
      }
    }
  }
}

body.subsite-menu-mobile-expand.header-scroll-down:not(.header-show) {
  .aside-subsite-menu.preload {
    #utk-subsite-menu {
      @include respond(xs, sm) {
        height: calc(100% - 94px) !important;

        .subsite-menu-wrap {
          height: calc(100% - 94px) !important;
        }
      }
    }
  }
}

